--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "angular6-hull",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start": "node server.js",
-    "postinstall": "ng build --prod"
+    "start": "ng serve",
+    "start:node": "node server.js",
+    "build:prod": "ng build --prod"
   },
   "private": true,
   "dependencies": {
